[gd_scene load_steps=14 format=2]

[ext_resource path="res://GameTheme.tres" type="Theme" id=1]
[ext_resource path="res://GameRooms/PauseMenu.gd" type="Script" id=2]
[ext_resource path="res://GameObjects/Player.gd" type="Script" id=3]
[ext_resource path="res://Sprites/Objects/Player/ravioli_jumping.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Objects/Player/ravioli_walking.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Objects/Player/ravioli_player.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.5, 7 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 5 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 5 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 5 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[node name="Player" type="KinematicBody2D" groups=["player"]]
position = Vector2( 79, 96 )
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 1 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
animation = "jump"
speed_scale = 2.0
playing = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -12, 0 )
current = true
zoom = Vector2( 0.25, 0.25 )

[node name="JumpBuffer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer" groups=["player"]]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -300.0
margin_right = 1024.0
margin_bottom = 300.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NoodleLabel" type="Label" parent="CanvasLayer/Control"]
margin_right = 40.0
margin_bottom = 14.0
text = "Noodles:"

[node name="NoodleValue" type="Label" parent="CanvasLayer/Control"]
margin_left = 82.0
margin_right = 139.0
margin_bottom = 22.0
text = "0 / 10"

[node name="PauseMenu" type="Control" parent="CanvasLayer"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/PauseMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.0
margin_right = 1.0
color = Color( 0.113725, 0.341176, 0.517647, 1 )

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/PauseMenu/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PauseMenu/ColorRect/CenterContainer"]
margin_left = 479.0
margin_top = 276.0
margin_right = 547.0
margin_bottom = 324.0

[node name="Resume" type="Button" parent="CanvasLayer/PauseMenu/ColorRect/CenterContainer/VBoxContainer"]
margin_right = 68.0
margin_bottom = 22.0
text = "Resume"

[node name="Quit" type="Button" parent="CanvasLayer/PauseMenu/ColorRect/CenterContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 68.0
margin_bottom = 48.0
text = "Quit"

[connection signal="pressed" from="CanvasLayer/PauseMenu/ColorRect/CenterContainer/VBoxContainer/Resume" to="CanvasLayer/PauseMenu" method="_on_Resume_pressed"]
[connection signal="pressed" from="CanvasLayer/PauseMenu/ColorRect/CenterContainer/VBoxContainer/Quit" to="CanvasLayer/PauseMenu" method="_on_Quit_pressed"]
